--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     //Preferences
     <string name="preference_token">Token</string>
     <string name="preference_is_hashed">Hash Enabled</string>
+    <string name="setup_lock_screen">
+        Secure lock screen hasn\'t set been up.\n
+        Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint or face
+    </string>
+    <string name="biometric_is_not_supported">
+        Looks like biometrics is not supported or disabled on your device
+    </string>
+
 </resources>
