--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,9 @@
 
     //Preferences
     <string name="preference_token">Token</string>
-    <string name="preference_is_hashed">Hash Enabled</string>
+    <string name="preference_password">Password</string>
+    <string name="preference_is_hashed">Hash input</string>
+    <string name="preference_is_biometric">Use biometric</string>
     <string name="setup_lock_screen">
         Secure lock screen hasn\'t set been up.\n
         Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint or face
