--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="biometric_is_not_supported">
         Looks like biometrics is not supported or disabled on your device
     </string>
+    <string name="copy_to_clipboard_button">Copy to clipboard</string>
 
     //Preferences
     <string name="preference_token">Token</string>
