--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="preference_is_biometric">Use biometric</string>
     <string name="preference_max_size">Password max size</string>
 
+    // Biometric prompt
+    <string name="prompt_info_title">My App\'s Authentication</string>
+    <string name="prompt_info_subtitle">Please login to get access</string>
+    <string name="prompt_info_description">My App is using Android biometric authentication</string>
+    <string name="prompt_info_use_app_password">Use app password</string>
+
 </resources>
