--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,10 @@
     <string name="preference_max_size">Password max size</string>
 
     // Biometric prompt
-    <string name="prompt_info_title">Use default password</string>
-    <string name="prompt_info_subtitle">Use your finger to set default password</string>
+    <string name="prompt_info_title">Verify</string>
+    <string name="prompt_info_subtitle">Use your finger to verify owner</string>
     <string name="prompt_info_description">Your password is secured by biometric authentication</string>
     <string name="do_not_use_password">Enter password manually</string>
+    <string name="cancel_enter_password">Cancel</string>
 
 </resources>
