--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="do_not_use_password">Enter password manually</string>
     <string name="cancel_enter_password">Cancel</string>
     <string name="password_not_changed">[unchanged]</string>
+    <string name="clear_default_password">Clear</string>
 
 </resources>
