--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="preference_suffix">Suffix</string>
     <string name="preference_password">Password</string>
     <string name="preference_is_hashed">Hash input</string>
-    <string name="preference_is_biometric">Use biometric</string>
+    <string name="preference_is_biometric">Ask save default</string>
     <string name="preference_max_size">Password max size</string>
 
     // Biometric prompt
