--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Vernam</string>
+    <string name="app_name">ZVernam</string>
     <string name="action_settings">Settings</string>
 
-    <string name="app_title">Vernam Cipher</string>
+    <string name="app_title">ZVernam Cipher</string>
     <string name="app_input_plaintext">Plain Text</string>
     <string name="app_input_secret">Secret</string>
     <string name="app_input_cipher">Cipher</string>
